etc/kubernetes/addons/traefik/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      containers:
      - image: traefik:v2.3.3
        name: traefik
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "300m"
            memory: "150Mi"
        readinessProbe:
          httpGet:
            path: /ping
            port: 2180
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 2180
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: traefik
          containerPort: 2180
          protocol: TCP
        - name: web
          containerPort: 2080
          protocol: TCP
        - name: websecure
          containerPort: 2443
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
          - name: tmp
            mountPath: /tmp
          - name: plugins
            mountPath: /plugins-storage
        args:
          - "--global.checknewversion=false"
          - "--global.sendanonymoususage=false"
          - "--entryPoints.traefik.address=:2180"
          - "--entryPoints.web.address=:2080"
          - "--entryPoints.websecure.address=:2443"
          - "--api.dashboard=true"
          - "--ping=true"
          - "--providers.kubernetescrd=true"
          - "--metrics.prometheus=true"
          - "--log.level=INFO"
      volumes:
        - name: data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: plugins
          emptyDir: {}
      affinity:
      tolerations:
      nodeSelector:
