etc/kubernetes/addons/traefik/dashboard-hook-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-addons
  labels:
    app: traefik-dashboard
spec:
  entryPoints:
  - traefik
  routes:
  - match: Host(`svc.kubernetes.node`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
